# python-to-npm-bridge

./: README.md  pyproject.toml  setup_dev.sh
examples/: demo.py
src/pynpm_bridge/: __init__.py  cli.py  exceptions.py  proxy.py  runtime.py  serializer.py  worker_manager.py
src/pynpm_bridge/node_worker/: package.json  worker.mjs
tests/: conftest.py  test_batch.py  test_cjs.py  test_class.py  test_esm.py  test_exceptions.py  test_function_call.py  test_install.py  test_property_access.py  test_restart.py  test_serialization.py
